@@ -8,6 +8,7 @@
 * Tweak - Update the shipping label status endpoint to accept and return multiple ids.
 * Tweak	- Display spinner icon during service data refresh.
 * Add	- Adds Dockerized E2E tests with GitHub Action integration.
+* Fix   - Handle DHL live rates notice creation and deletion errors.
 
 = 1.25.10 - 2021-03-24 =
 * Add   - Add an endpoint for shipping label creation eligibility and share code for store eligibility.
